# supergraph

./: .gitignore  LICENSE  MESSAGING.md  README.md  Rhythm.md  pyproject.toml  supergraph.example.yaml
example/: __init__.py  docker-compose.yml
example/db/: init.sql
example/gateway/: Dockerfile  main.py  supergraph.hcl
playground/: .gitignore  Dockerfile  IAM_VISUALIZER.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
playground/playground/: Dockerfile  index.html  package.json  vite.config.js
playground/playground/src/: App.jsx  index.css
playground/playground/src/components/: ExampleQueries.jsx  GraphExplorer.jsx  QueryEditor.jsx  ResultViewer.jsx
playground/playground/src/store/: graphSlice.js  index.js  querySlice.js
playground/src/: App.jsx  App.tsx  index.css
playground/src/components/: DocumentationPanel.jsx  DocumentationPanel.tsx  ExampleQueries.jsx  FkLookupModal.jsx  FkLookupModal.tsx  FormEditor.jsx  FormEditor.tsx  GraphExplorer.jsx  IAMAdmin.tsx  IAMVisualizer.tsx  MonacoEditor.jsx  MonacoEditor.tsx  QueryEditor.jsx  ResultViewer.jsx  ResultViewer.tsx  SchemaExplorer.jsx  Toast.jsx
playground/src/components/atoms/: CheckIcon.tsx  NumberCell.tsx  ResizeHandle.tsx  Toast.tsx  TruncatedText.tsx  index.ts
playground/src/components/molecules/: DataFieldItem.tsx  EntityList.tsx  EntityListItem.tsx  ExpandItem.tsx  FieldItem.tsx  FilterInput.tsx  SmartCell.tsx  (+7 more)
playground/src/constants/: colors.ts  editor.ts  filters.ts  index.ts  testData.ts
playground/src/hooks/: index.ts
playground/src/store/: builderSlice.js  builderSlice.ts  displaySlice.js  displaySlice.ts  graphSlice.js  graphSlice.ts  index.js  index.ts  querySlice.js  querySlice.ts  types.ts
playground/src/types/: index.ts
playground/src/utils/: columnHelpers.ts  fieldHelpers.ts  filterHelpers.ts  index.ts  queryParser.ts
scripts/: build_playground.sh
src/supergraph/: __init__.py  gateway.py
src/supergraph/api/: __init__.py  iam_endpoints.py  router.py
src/supergraph/cli/: __init__.py  builder.py  config.py  main.py  sync.py
src/supergraph/core/: __init__.py  compiler.py  defs.py  errors.py  hcl.py  nested_compiler.py  query_types.py  registry.py  request_parser.py  typescript_generator.py  utils.py  validator.py
src/supergraph/iam/: __init__.py  guard.py  service.py
src/supergraph/messaging/: __init__.py  cache.py  client.py  events.py  pubsub.py
src/supergraph/playground/: __init__.py
src/supergraph/runtime/: __init__.py  assembler.py  context.py  executor.py  mutation_executor.py  planner.py  service_client.py  transaction_executor.py
src/supergraph/service/: __init__.py  app.py  database.py  internal_api.py  schema.py
src/supergraph/viewsets/: __init__.py  base.py  cache.py  websocket.py
src/supergraph/websocket/: __init__.py  manager.py  router.py  subscription.py
(+32 files in other folders)
